--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -17,8 +17,8 @@
   border-radius: 3px !important;
   background-color: #f9f9f9;
 }
-select.form-control {
-  padding: 0 1em 0 .8em;
+.form-control {
+  padding: 3px 1em 0 .8em;
 }
 .ace-editor-container, .ace-body {
   background-color: #f9f9f9;
