--- a/styles/margot.css
+++ b/styles/margot.css
@@ -34,7 +34,7 @@
    --secondary-color-2:#D78958;
    --neutral-color:#4E5056;
    --neutral-soft-color:#b0b1b3;
-   --neutral-light-color:#fff;
+   --neutral-light-color: #ffffff;
 
    --success-color: #3cab3b;
    --danger-color: #d8604c;
