feat(margot): add main-title-fontfamily to presets

--- a/presets/default.css
+++ b/presets/default.css
@@ -7,4 +7,5 @@
   --neutral-light-color: #ffffff;
   --main-text-fontsize: 17px;
   --main-text-fontfamily: "Nunito", sans-serif;
+  --main-title-fontfamily:'Nunito', sans-serif;
 }
