--- a/styles/partials/bazar.css
+++ b/styles/partials/bazar.css
@@ -44,6 +44,11 @@ pre.precsv {
   padding: 0 0 20px 20px;
   max-width: 40%;
 }
+.BAZ_cadre_fiche [data-id=bf_image].left {
+  float: left;
+  padding: 0 20px 20px 0;
+  max-width: 40%;
+}
 .BAZ_cadre_fiche [data-id=bf_image] img {
   width: 100%;
 }
