--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -229,6 +229,9 @@ a.input-group-addon:hover {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
+.input-group .form-control:not(:first-child):not(:last-child), .input-group-addon:not(:first-child):not(:last-child), .input-group-btn:not(:first-child):not(:last-child) {
+  border-radius: 0 !important;
+}
 .input-group-addon, .input-group-btn {
   width: auto;
 }
