--- a/styles/templates/search.css
+++ b/styles/templates/search.css
@@ -4,18 +4,20 @@
   font-size: 4rem;
   position: absolute;
   z-index: 5;
-  top: -.6rem;
   left: 0;
   padding: 0;
 }
 .bazar-search input[type=text] {
   margin-left: 2.7rem;
-  border-bottom-left-radius: .9rem !important;
+  border-radius: .9rem !important;
   background-color: #e8e8e8;
   box-shadow: none;
   border: none !important;
   height: 2.4rem;
   padding-left: 1.5rem;
+}
+.facette-container.dynamic .bazar-search input[type=text] {
+  border-radius: 0 .5rem .5rem .9rem !important;
 }
 .bazar-search .search-filter select {
   height: 2.4rem;
