--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -309,6 +309,7 @@ form .col-sm-9 {
   margin-top: 0 !important;
   border-radius: 0 5px 5px 5px;
   margin-bottom: 10px;
+  z-index: 8;
 }
 .btn-geolocate-address {
   border-bottom-left-radius: 0;
