--- a/styles/margot-base/partials/general.css
+++ b/styles/margot-base/partials/general.css
@@ -1,14 +1,15 @@
 /*
  * Webfont
  */
- /* nunito-regular - latin */
+
+/* nunito-regular - latin */
 @font-face {
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 400;
   src: local('Nunito Regular'), local('Nunito-Regular'),
-       url('../../fonts/nunito-v11-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../../fonts/nunito-v11-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('../../../fonts/nunito-v11-latin-regular.woff2') format('woff2'),
+    url('../../../fonts/nunito-v11-latin-regular.woff') format('woff');
 }
 
 /* nunito-600 - latin */
@@ -17,8 +18,8 @@
   font-style: normal;
   font-weight: 600;
   src: local('Nunito SemiBold'), local('Nunito-SemiBold'),
-       url('../../fonts/nunito-v11-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../../fonts/nunito-v11-latin-600.woff') format('woff'); /* Modern Browsers */
+    url('../../../fonts/nunito-v11-latin-600.woff2') format('woff2'),
+    url('../../../fonts/nunito-v11-latin-600.woff') format('woff');
 }
 
 /* nunito-800 - latin */
@@ -27,8 +28,8 @@
   font-style: normal;
   font-weight: 800;
   src: local('Nunito ExtraBold'), local('Nunito-ExtraBold'),
-       url('../../fonts/nunito-v11-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../../fonts/nunito-v11-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('../../../fonts/nunito-v11-latin-800.woff2') format('woff2'),
+    url('../../../fonts/nunito-v11-latin-800.woff') format('woff');
 }
 
 
@@ -36,7 +37,8 @@
 * Main styles
 */
 
-html, body { /* define also html so we can use rem */
+html, body {
+  /* define also html so we can use rem */
   background: var(--main-bg-color);
   color: var(--main-text-color);
   font-size: var(--main-text-fontsize) !important;
@@ -59,31 +61,47 @@ h1 {
   font-size: 3.2rem;
   letter-spacing: -.5px;
 }
+
 h2 {
   font-size: 2rem;
 }
+
 h3 {
   font-size: 1.5rem;
 }
+
 h4 {
   font-size: 1.2rem;
 }
+
 h5 {
   font-size: 1.2rem;
 }
+
 h6 {
   font-size: 1rem;
 }
 
-br + h1, br + h2 {
+br+h1, br+h2 {
   margin-top: .2em;
 }
 
 @media (max-width: 1200px) {
-  h1 { font-size: 2rem; }
-  h2 { font-size: 1.4rem; }
-  h3 { font-size: 1.2rem; }
-  h4, h5, h6 { color: var(--neutral-color); }
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+  }
+
+  h4, h5, h6 {
+    color: var(--neutral-color);
+  }
 }
 
 /* Links */
@@ -92,61 +110,74 @@ a {
   text-decoration: none;
   font-weight: 600;
 }
+
 a:focus, a:hover {
   color: var(--link-hover-color);
   text-decoration: underline;
 }
+
 a.yeswiki-editable .icon-edit {
   font-size: .8rem;
   margin-left: 2px;
 }
+
 pre {
   color: inherit;
 }
+
 img {
   border-radius: 3px;
 }
+
 ul {
   padding-left: 2rem;
 }
+
 .label {
   padding: .1em .5em !important;
 }
+
 .background-image {
   padding: 1rem 0;
 }
+
 /* To prevent display trouble on small screen */
-@media (max-width: 400px){
-    a {
-        word-break: break-word;
-    }
+@media (max-width: 400px) {
+  a {
+    word-break: break-word;
+  }
 }
 
 /* Icon compatibility ; not fontawesome*/
 :not(.fa):not(.fa-trash).icon-trash::before {
-    content: "\e020";
+  content: "\e020";
 }
+
 :not(.fa):not(.fa-eye-open).icon-eye-open::before {
 
-    content: "\e105";
+  content: "\e105";
 
 }
+
 :not(.fa):not(.fa-tags).icon-tags::before {
-    content: "\e042";
+  content: "\e042";
 }
+
 :not(.fa).icon-white, :not(.fa):not(.form-group).icon, :not(.fa).icon-pencil, :not(.fa).icon-tags, :not(.fa).icon-trash {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: "Glyphicons Halflings";
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1;
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: "Glyphicons Halflings";
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
 }
+
 /* Font Awesome */
-.fa-eye-open::before{
-    content: "\f06e";
+.fa-eye-open::before {
+  content: "\f06e";
 }
+
 .fa-remove::before {
-    content: "\f00d";
+  content: "\f00d";
 }
