--- a/styles/margot-fun.css
+++ b/styles/margot-fun.css
@@ -1,7 +1,3 @@
-/* Styles for yeswiki's template
- * under GNU General Public License
- */
-
 @import 'margot-base/partials/general.css';
 @import 'margot-base/partials/navbar.css';
 @import 'margot-base/partials/header.css';
@@ -25,12 +21,8 @@
 @import 'margot-base/templates/search.css';
 @import 'margot-base/templates/annuaire.css';
 
-/*
- * CSS variables
- */
 :root {
   --primary-color: #1A89A0;
-  /* initial yellow #F8C400; */
   --secondary-color-1: #d8604c;
   --secondary-color-2: #D78958;
   --neutral-color: #4E5056;
@@ -43,8 +35,6 @@
 
   --main-text-color: var(--neutral-color);
   --main-text-fontsize: 17px;
-  --main-text-fontfamily: 'Nunito', sans-serif;
-  --main-title-fontfamily: 'Nunito', sans-serif;
   --main-bg-color: var(--neutral-light-color);
   --main-container-bg-color: var(--neutral-light-color);
 
@@ -53,22 +43,22 @@
   --link-hover-color: var(--primary-color);
 
   /* contained page */
-  --navbar-bg-color: var(--primary-color);
-  --navbar-text-color: var(--neutral-light-color);
-  --navbar-link-color: var(--neutral-light-color);
+  --navbar-bg-color: var(--neutral-soft-color);
+  --navbar-text-color: var(--neutral-color);
+  --navbar-link-color: var(--neutral-color);
   --navbar-link-bg-color: transparent;
-  --navbar-link-hover-color: rgba(255, 255, 255, 0.85);
+  --navbar-link-hover-color: var(--neutral-color);
   --navbar-link-bg-hover-color: transparent;
   --navbar-border: none;
   --navbar-border-radius: 0;
   --navbar-shadow: none;
 
 
-  --header-bg-color: var(--neutral-light-color);
+  --header-bg-color: var(--neutral-soft-color);
   --header-text-color: var(--neutral-color);
-  --header-title-color: var(--primary-color);
+  --header-title-color: var(--neutral-color);
 
-  --footer-bg-color: transparent;
+  --footer-bg-color: var(--neutral-soft-color);
   --footer-text-color: var(--main-text-color);
   --footer-title-color: var(--main-text-color);
   --footer-border-top: 3px solid var(--neutral-soft-color);
@@ -76,7 +66,7 @@
   --btn-border: none;
   --btn-border-radius: .5em;
 
-  --checkbox-color: var(--primary-color)
+  --checkbox-color: var(--neutral-color)
 }
 
 @media (max-width: 1200px) {
