--- a/presets/default.css
+++ b/presets/default.css
@@ -3,7 +3,7 @@
   --secondary-color-1: #d8604c;
   --secondary-color-2: #d78958;
   --neutral-color: #4e5056;
-  --neutral-soft-color: #b0b1b3;
+  --neutral-soft-color: #87898e; /*#b0b1b3;*/
   --neutral-light-color: #ffffff;
   --main-text-fontsize: 17px;
   --main-text-fontfamily: "Nunito", sans-serif;
