--- a/presets/fun.css
+++ b/presets/fun.css
@@ -3,8 +3,8 @@
   --secondary-color-1: #F09989;
   --secondary-color-2: #F0C431;
   --neutral-color: #173150;
-  --neutral-soft-color: #F9F0E6;
-  --neutral-light-color: #FFFFFF;
+  --neutral-soft-color: #768597;
+  --neutral-light-color: #F0E7DC;
   --main-text-fontsize: 17px;
   --main-text-fontfamily: "Nunito", sans-serif;
   --main-title-fontfamily: 'Nunito', sans-serif;
