margot-fun fix colors

--- a/presets/fun.css
+++ b/presets/fun.css
@@ -1,4 +1,5 @@
 :root {
+  /* For margot fun, all primary and secondary are light colors */
   --primary-color: #87D2E8;
   --secondary-color-1: #F09989;
   --secondary-color-2: #F0C431;
