--- a/styles/margot-base/components/forms.css
+++ b/styles/margot-base/components/forms.css
@@ -69,7 +69,7 @@ textarea.form-control {
   position: absolute;
   z-index: 5;
   left: 1.7rem;
-  background-color: var(--neutral-light-color);
+  background-color: var(--main-container-bg-color);
   padding: 0 4px 0 8px;
   bottom: calc(100% - 10px);
 }
