--- a/styles/margot-fun.css
+++ b/styles/margot-fun.css
@@ -25,17 +25,17 @@
 @import 'margot-fun/header.css';
 
 :root {
-  --success-color: #3cab3b;
-  --danger-color: #d8604c;
-  --warning-color: #D78958;
+  --success-color: #a0d95d;
+  --danger-color: #f09989;
+  --warning-color: #fab44c;
 
   --main-text-color: var(--neutral-color);
   --main-bg-color: white;
   --main-container-bg-color: white;
 
   /* Links */
-  --link-color: var(--primary-color);
-  --link-hover-color: var(--primary-color);
+  --link-color: var(--neutral-soft-color);
+  --link-hover-color: var(--neutral-color);
 
   /* contained page */
   --navbar-bg-color: var(--neutral-light-color);
