--- a/styles/margot-fun/general.css
+++ b/styles/margot-fun/general.css
@@ -5,3 +5,69 @@
 .btn.btn-neutral {
   background-color: var(--neutral-soft-color);
 }
+
+/* with margot fun, primary and seconry are light, so we need to write with netraul instead of neutral-light */
+.label {
+  color: var(--neutral-color) !important;
+  padding: .2rem .5rem .1rem .5rem !important;
+}
+.label-default {
+  background-color: var(--neutral-light-color);
+}
+.label-info {
+  opacity: 1;
+}
+.panel-heading {
+  color: var(--neutral-color) !important;
+  --chevron-color: var(--neutral-color) !important;
+}
+.panel-default:not(.note-editor) > .panel-heading {
+  background-color: var(--neutral-light-color);
+  border-color: var(--neutral-light-color);
+}
+.panel-default {
+  border-color: var(--neutral-light-color);
+}
+h1, h3, h4, h5, h6 {
+  color: var(--neutral-color) !important;
+}
+.well {
+  border: none;
+  box-shadow: none;
+  padding: 1rem 1.75rem;
+}
+.bazar-card .floating-area .date,
+.bazar-card .floating-area .text {
+  color: var(--neutral-color) !important;
+}
+.bazar-card .title-area + .subtitle-area {
+  font-weight: bold !important;
+}
+.results-container .filter-box:nth-of-type(2),
+.results-container .filter-box:nth-of-type(5) {
+  --neutral-color: var(--neutral-color);
+  --checkbox-color: var(--secondary-color-1);
+  --neutral-light-color: var(--secondary-color-1);
+}
+.results-container .filter-box:nth-of-type(3),
+.results-container .filter-box:nth-of-type(6) {
+  --neutral-color: var(--neutral-color);
+  --checkbox-color: var(--secondary-color-2);
+  --neutral-light-color: var(--secondary-color-2);
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover, .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+  color: var(--neutral-color);
+}
+.table-condensed>tbody>tr>td:first-child strong, .table-condensed>tbody>tr>td:first-child h1, .table-condensed>tbody>tr>td:first-child h2, .table-condensed>tbody>tr>td:first-child h3, .table-condensed>tbody>tr>td:first-child h4, .table-condensed>tbody>tr>td:first-child h5, .table-condensed>tbody>tr>td:first-child h6 {
+  color: var(--neutral-color);
+}
+.input-group-addon {
+  color: var(--neutral-color);
+}
+.form-group .control-label,
+input.form-control[type=file]::before {
+  color: var(--neutral-color);
+}
+.bazar-list .panel-heading[data-toggle=collapse] {
+  background-color: var(--main-bg-color);
+}
