--- a/presets/default.css
+++ b/presets/default.css
@@ -4,7 +4,7 @@
   --secondary-color-2: #d78958;
   --neutral-color: #4e5056;
   --neutral-soft-color: #87898e; /*#b0b1b3;*/
-  --neutral-light-color: #ffffff;
+  --neutral-light-color: #f2f2f2;
   --main-text-fontsize: 17px;
   --main-text-fontfamily: "Nunito", sans-serif;
   --main-title-fontfamily:'Nunito', sans-serif;
