--- a/styles/margot-base/components/buttons.css
+++ b/styles/margot-base/components/buttons.css
@@ -8,6 +8,9 @@
   font-weight: 600;
   transition: all .2s;
 }
+.aceditor-toolbar .btn {
+  padding-top: .6rem;
+}
 .btn:hover {
   opacity: .9;
   color: var(--neutral-light-color);
